Development Portal (2020-03-26 shi)
==============================
New graph replacements for landing page
Display organisation types for publisher graph
Display country codes for recipient graph
Display sector codes for sector graph
Adjust colours for accessibility
Display information text for new graphs
Minor css changes
Add padding for when result values are long text
Update tag section to include code number
Capitalise narrative for result title and description


Development Portal (2020-03-08 shi)
==============================
Fix result title and description display
Add indicator length
Update result, document-link css
Cleanup glossary section
Update display for combination of result reference, doc, title


Development Portal (2020-03-05 shi)
==============================
Display @measure and date bars in results
Update background colour for charts to use hsl
Display @baseline-year


Development Portal (2020-02-29 shi)
==============================
Cleanup result groupings
Display location-id, feature
Display all transaction lengths
Display all result lengths
Fix transaction legend to only show when type is available
Cleanup indicator tables
Add empty descriptions for result elements
Update result groupings and header colours
Use different chunk when result reference is not available
Display location ref, vocab and update css for description
Update table widths and font size for related-activity
Display result main titles
Display achieved percentage as color indicators
Update new savi examples
Display glossary for results


Development Portal (2020-02-28 shi)
==============================
Display indicator document-link
Move activity status close to dates
Display indicator measure


Development Portal (2020-02-11 shi)
==============================
Update css for transaction, budget and planned disbursement tables


Development Portal (2020-02-10 shi)
==============================
Display transaction charts
Display legend
Import chartist css