@@ -1075,10 +1075,10 @@ Discover Results
 Search
 
 #search_placeholder_txt
-Type (eg. Ebola or Activity ID) or select filters to narrow your search
+Type (eg. COVID-19 or Activity ID) or select filters to narrow your search
 
 #search2_placeholder_txt
-Type (eg. Ebola)
+Type (eg. COVID-19 or Activity ID) or select filters to narrow your search
 
 #search_publisher_dropmenu_text trim=ends
 Search for a Publisher
