@@ -217,85 +217,96 @@
 		<br/>Sort filter dropdowns by <i>alphabetical</i> order <span class="underline"><b>or</b></span> by relevant <i>IATI/CRS code</i> (e.g. by CRS sector numbers)
 	</div>
 	<div class="filter_text">GLOSSARY</div>
-<table class="head filter_table">
+<table class="head filter_table">	<!--	GLOSSARY	-->
+	<thead>
 	<tr>
-		<td class="filter_title"><img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</td>
-		<td class="filter_title"><img src="{flava}search_sector.png" alt="Sector Group icon" width="13" height="13"/>{search_sectorgroup_txt}</td>
-		<td class="filter_title"><img src="{flava}search_status.png" alt="Status icon" width="13" height="13"/>{search_status_txt}</td>
+		<th class="gloss_name">{search_status_txt}</th>
+		<th>An <a href="http://reference.iatistandard.org/203/codelists/ActivityStatus/#codes" target="blank" rel="noopener noreferrer">IATI code</a> defining the current status of the activity.</th>
 	</tr>
+	</thead>
 	<tr>
-		<td>Countries reported by publishers are using <a href="https://en.wikipedia.org/wiki/ISO_3166-2" target="blank" rel="noopener noreferrer">ISO3166 Alpha-2</a>.</td>
-		<td>The sector reported corresponds to an <a href="http://reference.iatistandard.org/203/codelists/SectorCategory/#codes" target="blank" rel="noopener noreferrer">OECD DAC CRS 3-digit purpose code</a>.</td>
-		<td>An <a href="http://reference.iatistandard.org/203/codelists/ActivityStatus/#codes" target="blank" rel="noopener noreferrer">IATI code</a> defining the current status of the activity.</td>
-	</tr>
-	<tr>
-		<td class="filter_title"><img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}</td>
-		<td class="filter_title"><img src="{flava}search_category.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</td>
-		<td class="filter_title"><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt}</td>
-	</tr>
-	<tr>
-		<td>Publishers are from the <a href="https://iatiregistry.org/publisher" target="blank" rel="noopener noreferrer">IATI Registry</a>. This <a href="http://reference.iatistandard.org/203/activity-standard/iati-activities/iati-activity/reporting-org/" target="blank" rel="noopener noreferrer">IATI element</a> is a list of reporting organisations issuing the report.</td>
-		<td>The sector reported corresponds to an <a href="http://reference.iatistandard.org/203/codelists/Sector/#codes" target="blank" rel="noopener noreferrer">OECD DAC CRS 5-digit purpose code</a>.</td>
-		<td>Select the starting and/or ending year as the range for activities.</td>
-	</tr>
-	<tr>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_collaboration_type_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_aid_type_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_finance_type_txt}</td>
-	</tr>
-	<tr>
+		<td>{search_collaboration_type_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/CollaborationType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> defining the type of collaboration involved in the activity’s disbursements.</td>
+	</tr>
+	<tr>
+		<td>{search_aid_type_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/AidType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> specifying the type of aid being supplied.</td>
+	</tr>
+	<tr>
+		<td>{search_finance_type_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/FinanceType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the default DAC/CRS transaction classification used to distinguish financial instruments like grants or loans.</td>
 	</tr>
 	<tr>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_flow_type_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_tied_status_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_document_category_txt}</td>
+		<td>{search_flow_type_txt}</td>
+		<td>An <a href="http://reference.iatistandard.org/203/codelists/FlowType/#codes" target="blank">IATI code</a> defining whether the activity is funded by Official Development Assistance (ODA), Other Official Flows (OOF), etc.</td>
 	</tr>
 	<tr>
-		<td>An <a href="http://reference.iatistandard.org/203/codelists/FlowType/#codes" target="blank">IATI code</a> defining whether the activity is funded by Official Development Assistance (ODA), Other Official Flows (OOF), etc.</td>
+		<td>{search_tied_status_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/TiedStatus/#codes" target="blank">IATI code</a> interpreting the usage of Columns 36-38 of the CRS++ reporting format.</td>
+	</tr>
+	<tr>
+		<td>{search_document_category_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/DocumentCategory/#codes" target="blank">IATI code</a> defining the category of the document.</td>
 	</tr>
 	<tr>
-		
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_policy_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_related_activity_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_result_type_txt}</td>
-	</tr>
-	<tr>
-		
-		<td>An <a href="http://reference.iatistandard.org/203/codelists/PolicyMarker/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the vocabulary to be used to define a policy or theme addressed by the activity.</td>
-		<td>An <a href="http://reference.iatistandard.org/203/codelists/RelatedActivityType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the type of relationship another separately reported IATI activity is related to this one.</td>
-		<td>An <a href="http://reference.iatistandard.org/203/codelists/ResultType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the type of result being reported.</td>
-	</tr>
-	<tr>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_humanitarian_activity_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_humanitarian_scope_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_participating_txt}</td>	
-		
-	</tr>
-	<tr>
+		<td>{search_humanitarian_activity_txt}</td>
 		<td>A <a href="http://reference.iatistandard.org/203/activity-standard/iati-activities/iati-activity/" target="blank" rel="noopener noreferrer">process flag</a> to indicate that this activity and/or transaction relates entirely or partially to humanitarian aid.</td>
+	</tr>
+	<tr>
+		<td>{search_humanitarian_scope_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/HumanitarianScopeVocabulary/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for a recognised vocabulary of terms classifying the event or action.</td>
+	</tr>
+	<tr>
+		<td>{search_participating_txt}</td>	
 		<td>Publishers are from the <a href="https://iatiregistry.org/publisher" target="blank" rel="noopener noreferrer">IATI Registry</a>. This is not an extensive list - includes only the existing list of IATI publishers.</td>
 	</tr>
 	<tr>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_tag_vocab_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_commitment_txt}</td>
-		<td class="filter_title"><span>&#10096;&#10097;</span> {search_transaction_type_txt}</td>
+		<td>{search_policy_txt}</td>
+		<td>An <a href="http://reference.iatistandard.org/203/codelists/PolicyMarker/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the vocabulary to be used to define a policy or theme addressed by the activity
 	</tr>
 	<tr>
+		<td>{search_publisher_txt}</td>
+		<td>Publishers are from the <a href="https://iatiregistry.org/publisher" target="blank" rel="noopener noreferrer">IATI Registry</a>. This <a href="http://reference.iatistandard.org/203/activity-standard/iati-activities/iati-activity/reporting-org/" target="blank" rel="noopener noreferrer">IATI element</a> is a list of reporting organisations issuing the report.</td>
+	</tr>
+	<tr>
+		<td>{search_recipient_txt}</td>
+		<td>Countries reported by publishers are using <a href="https://en.wikipedia.org/wiki/ISO_3166-2" target="blank" rel="noopener noreferrer">ISO3166 Alpha-2</a>.</td>	
+	</tr>
+	<tr>
+		<td>{search_related_activity_txt}</td>
+		<td>An <a href="http://reference.iatistandard.org/203/codelists/RelatedActivityType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the type of relationship another separately reported IATI activity is related to this one.</td>
+	</tr>
+	<tr>
+		<td>{search_result_type_txt}</td>
+		<td>An <a href="http://reference.iatistandard.org/203/codelists/ResultType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the type of result being reported.</td>
+	</tr>
+	<tr>
+		<td>{search_sector_txt}</td>
+		<td>The sector reported corresponds to an <a href="http://reference.iatistandard.org/203/codelists/Sector/#codes" target="blank" rel="noopener noreferrer">OECD DAC CRS 5-digit purpose code</a>.</td>
+	</tr>
+	<tr>
+		<td>{search_sectorgroup_txt}</td>
+		<td>The sector reported corresponds to an <a href="http://reference.iatistandard.org/203/codelists/SectorCategory/#codes" target="blank" rel="noopener noreferrer">OECD DAC CRS 3-digit purpose code</a>.</td>		
+	</tr>
+	<tr>
+		<td>{search_tag_vocab_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/TagVocabulary/#codes" target="blank" rel="noopener noreferrer">IATI code</a> for the vocabulary or taxonomy used for tag classifications.</td>
+	</tr>
+	<tr>
+		<td>{search_commitment_txt}</td>
 		<td>Select the minimum and/or maximum sum of all <a href="http://reference.iatistandard.org/203/codelists/TransactionType/#codes" target="blank" rel="noopener noreferrer">Outgoing Commitment</a> type transactions.</td>
+	</tr>
+	<tr>
+		<td>{search_transaction_type_txt}</td>
 		<td>An <a href="http://reference.iatistandard.org/203/codelists/TransactionType/#codes" target="blank" rel="noopener noreferrer">IATI code</a> defining the type of transaction.</td>
 	</tr>
 	<tr>
-		<td colspan="3" class="filter_title"><span>&#10096;&#10097;</span> {search_external_txt}</td>
+		<td>{search_year_txt}</td>
+		<td>Select the starting and/or ending year as the range for activities.</td>
 	</tr>
 	<tr>
-		<td colspan="3">Get a list of IATI identifiers in JSON format and paste the URL here to view the activities in d-portal. This is especially useful if you want to view a specific set of activities.</td>
+		<td>{search_external_txt}</td>
+		<td>Get a list of IATI identifiers in JSON format and paste the URL here to view the activities in d-portal. This is especially useful if you want to view a specific set of activities.</td>
 	</tr>
 </table>
 </div>
@@ -403,53 +414,29 @@
 <div onclick="$('#more_filters').toggle();" class="search_show">Advanced filters</div>
 
 <div id="more_filters" style="display:none;">
-	<div class="search_wrap">			<!-- Collaboration Type	-->
+	<div class="search_wrap">		<!-- Policy Marker	-->
 		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_collaboration_type_txt}
+			<span>&#10096;&#10097;</span> {search_policy_txt}
 		</div>
-		<select aria-label="Select a collaboration type from this dropdown" id="view_search_select_collaboration_type" class="chosen" multiple>
+		<select aria-label="Select a policy significance and code from this dropdown" id="view_search_select_policy" class="chosen" multiple>
 			<option value></option>
-			{search_options_collaboration_type}
+			{search_options_policy}
 		</select>
-	</div><div class="search_wrap mid">		<!-- Default Aid Type	-->
+	</div><div class="search_wrap mid">		<!-- Participating Org	-->
 		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_aid_type_txt}
+			<span>&#10096;&#10097;</span> {search_participating_txt}
 		</div>
-		<select aria-label="Select a default aid type from this dropdown" id="view_search_select_aid_type" class="chosen" multiple>
+		<select aria-label="Select an participating organisation type from this dropdown" id="view_search_select_participating" class="chosen" multiple>
 			<option value></option>
-			{search_options_aid_type}
+			{search_options_participating}
 		</select>
-	</div><div class="search_wrap">		<!-- Default Finance Type	-->
+	</div><div class="search_wrap">		<!-- Result Type	-->
 		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_finance_type_txt}
+			<span>&#10096;&#10097;</span> {search_result_type_txt}
 		</div>
-		<select aria-label="Select a default finance type from this dropdown" id="view_search_select_finance_type" class="chosen" multiple>
+		<select aria-label="Select a result type from this dropdown" id="view_search_select_result_type" class="chosen" multiple>
 			<option value></option>
-			{search_options_finance_type}
-		</select>
-	</div><div class="search_wrap">		<!-- Default Flow Type	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_flow_type_txt}
-		</div>
-		<select aria-label="Select a default flow type from this dropdown" id="view_search_select_flow_type" class="chosen" multiple>
-			<option value></option>
-			{search_options_flow_type}
-		</select>
-	</div><div class="search_wrap mid">		<!-- Default Tied Status	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_tied_status_txt}
-		</div>
-		<select aria-label="Select a default finance type from this dropdown" id="view_search_select_tied_status" class="chosen" multiple>
-			<option value></option>
-			{search_options_tied_status}
-		</select>
-	</div><div class="search_wrap">		<!-- Document Category	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_document_category_txt}
-		</div>
-		<select aria-label="Select a document category from this dropdown" id="view_search_select_document_category" class="chosen" multiple>
-			<option value></option>
-			{search_options_document_category}
+			{search_options_result_type}
 		</select>
 	</div><div class="search_wrap">		<!-- Humanitarian Activity	-->
 		<div class="search_label">
@@ -467,38 +454,6 @@
 			<option value></option>
 			{search_options_humanitarian_scope}
 		</select>
-	</div><div class="search_wrap">		<!-- Participating Org	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_participating_txt}
-		</div>
-		<select aria-label="Select an participating organisation type from this dropdown" id="view_search_select_participating" class="chosen" multiple>
-			<option value></option>
-			{search_options_participating}
-		</select>
-	</div><div class="search_wrap">		<!-- Policy Marker	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_policy_txt}
-		</div>
-		<select aria-label="Select a policy significance and code from this dropdown" id="view_search_select_policy" class="chosen" multiple>
-			<option value></option>
-			{search_options_policy}
-		</select>
-	</div><div class="search_wrap mid">		<!-- Related Activity	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_related_activity_txt}
-		</div>
-		<select aria-label="Select a related activity type from this dropdown" id="view_search_select_related_activity" class="chosen" multiple>
-			<option value></option>
-			{search_options_related_activity}
-		</select>
-	</div><div class="search_wrap">		<!-- Result Type	-->
-		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_result_type_txt}
-		</div>
-		<select aria-label="Select a result type from this dropdown" id="view_search_select_result_type" class="chosen" multiple>
-			<option value></option>
-			{search_options_result_type}
-		</select>
 	</div><div class="search_wrap">		<!-- Tag Vocabulary	-->
 		<div class="search_label">
 			<span>&#10096;&#10097;</span> {search_tag_vocab_txt}
@@ -507,7 +462,23 @@
 			<option value></option>
 			{search_options_tag_vocab}
 		</select>
-	</div><div class="search_wrap mini mid">		<!-- Commitment Threshold	-->
+	</div><div class="search_wrap">		<!-- Document Category	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_document_category_txt}
+		</div>
+		<select aria-label="Select a document category from this dropdown" id="view_search_select_document_category" class="chosen" multiple>
+			<option value></option>
+			{search_options_document_category}
+		</select>
+	</div><div class="search_wrap mid">		<!-- Transaction Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_transaction_type_txt}
+		</div>
+		<select aria-label="Select a transaction type from this dropdown" id="view_search_select_transaction_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_transaction_type}
+		</select>
+	</div><div class="search_wrap mini">		<!-- Commitment Threshold	-->
 		<div class="search_label">
 			<span>&#10096;&#10097;</span> {search_commitment_txt}
 		</div>
@@ -518,13 +489,53 @@
 			<option value></option>
 			{search_options_commitment_max}
 		</select>
-	</div><div class="search_wrap">		<!-- Transaction Type	-->
+	</div><div class="search_wrap">		<!-- Related Activity	-->
 		<div class="search_label">
-			<span>&#10096;&#10097;</span> {search_transaction_type_txt}
+			<span>&#10096;&#10097;</span> {search_related_activity_txt}
 		</div>
-		<select aria-label="Select a transaction type from this dropdown" id="view_search_select_transaction_type" class="chosen" multiple>
+		<select aria-label="Select a related activity type from this dropdown" id="view_search_select_related_activity" class="chosen" multiple>
 			<option value></option>
-			{search_options_transaction_type}
+			{search_options_related_activity}
+		</select>
+	</div><div class="search_wrap mid">			<!-- Collaboration Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_collaboration_type_txt}
+		</div>
+		<select aria-label="Select a collaboration type from this dropdown" id="view_search_select_collaboration_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_collaboration_type}
+		</select>
+	</div><div class="search_wrap">		<!-- Default Flow Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_flow_type_txt}
+		</div>
+		<select aria-label="Select a default flow type from this dropdown" id="view_search_select_flow_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_flow_type}
+		</select>
+	</div><div class="search_wrap">		<!-- Default Finance Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_finance_type_txt}
+		</div>
+		<select aria-label="Select a default finance type from this dropdown" id="view_search_select_finance_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_finance_type}
+		</select>
+	</div><div class="search_wrap mid">		<!-- Default Aid Type	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_aid_type_txt}
+		</div>
+		<select aria-label="Select a default aid type from this dropdown" id="view_search_select_aid_type" class="chosen" multiple>
+			<option value></option>
+			{search_options_aid_type}
+		</select>
+	</div><div class="search_wrap">		<!-- Default Tied Status	-->
+		<div class="search_label">
+			<span>&#10096;&#10097;</span> {search_tied_status_txt}
+		</div>
+		<select aria-label="Select a default finance type from this dropdown" id="view_search_select_tied_status" class="chosen" multiple>
+			<option value></option>
+			{search_options_tied_status}
 		</select>
 	</div>
 	<div class="search_external">
