@@ -1,3 +1,10 @@
+Development Portal (2020-03-28 shi)
+==============================
+Update search text
+Update search2 glossary and rearrange filters
+css changes
+
+
 Development Portal (2020-03-26 shi)
 ==============================
 New graph replacements for landing page
